--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <input type="password" placeholder="Password" name="pass" value="" maxlength="8" required>
         </div>
         <input class="btn" type="submit" name="submit" value="Sign in"> 
-        <center> <a style="color: black;" href="signup.html"> Don't have an account ? </a> <center>
+        <center> <a style="color:white;" href="signup.html"> Don't have an account ? </a> <center>
       </div>
     </form>
   </body>
