--- a/mainPage.html
+++ b/mainPage.html
@@ -118,8 +118,8 @@
           <a href="https://www.facebook.com/"> <img src="images//logo//facebook.jpg" height="25px" width="25px"> </a>
           <a href="https://www.instagram.com/"> <img src="images//logo//instagram.jpg" height="25px" width="25px"> </a>
           <a href="https://twitter.com/"> <img src="images//logo//twitter.jpg" height="25px" width="25px"> </a>
-          <p> <b> Posted by: Nargis Jahan<br>
-          Contact Information: xyz@gmail.com</b></p>
+          <p> <b> Developed by: Nargis Jahan<br>
+          Contact Information: nargisjahan2020@gmail.com</b></p>
        </footer>
     </div>
     <script>
